Small style fix for the relative filter that stood out too much when inactive

--- a/src/Definitions/filters/components/controls/DateCtrl/DateCtrl.sass
+++ b/src/Definitions/filters/components/controls/DateCtrl/DateCtrl.sass
@@ -1,5 +1,8 @@
 .DateCtrl
   /**/
+.DateCtrl:not(.DateCtrl_active), .Relative:not(.Relative_active)
+  .Picker.active
+    background: $color-mono-1
 
 .Relative
   display: flex
